override main template

--- a/apps/invitaciones/templates/main.html
+++ b/apps/invitaciones/templates/main.html
@@ -1,13 +1,180 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-<h1>PginA CREADA</h1>
-</body>
+  <head>
+    {% load static %}
+    
+    <meta charset="UTF-8"/>
+    <title>Bootstrap Website Two</title>
+    <!-- GOOGLE FONT -->
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
+    <!-- BOOTSTRAP 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- SCROOLL REVEAL JS LIBRARY CDN -->
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="{% static 'css/main.css'%}">
+  </head>
+  <body>
+    <!--<div class="parallax-mirror" style="visibility: visible; z-index: -100; position: fixed; top: 0px; left: 0px; overflow: hidden; transform: translate3d(0px, 0px, 0px); height: 1199.39px; width: 1312px;"><img class="parallax-slider" src="https://www.fixdate.io/modelo-invitacion/32/img/portada-3.webp" style="transform: translate3d(-228px, 0px, 0px); position: absolute; height: 989px; width: 1769px; max-width: none;"></div>-->
+    <!-- NAVIGATION -->
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#">WebsiteTwo</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link" href="#header">Home</a>
+            <a class="nav-item nav-link" href="#header">Home</a>
+            <a class="nav-item nav-link" href="#info-one">About</a>
+            <a class="nav-item nav-link" href="#contact">Contact</a>
+        </div>
+      </div>
+    </nav>-->
+
+    <!-- SECTION -->
+    <!--
+    <section id = "Home">
+        <div class="content-portada text-center">
+            <div class= "box-nombres-fecha-portada">
+                <span class="fecha">
+                    11.11.2023          
+                </span>
+                <h1>
+                    Kevin<br class="d-md-none">
+                    <span>&amp;</span>
+                    <br class="d-md-none">
+                    Belen          
+                </h1>
+                <div class="line">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="header">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md-6 col-sm-6">
+            <div class="header-content-left">
+              <img src="img/image1.png" style="width: 100%;">
+            </div>  
+          </div>
+          <div class="col-md-6 col-sm-6">
+            <div class="header-content-right">
+              <h1 class="display-4">Sit asperiores voluptas atque autem?</h1>
+              <p class="mt-5">Amet possimus omnis dolore aliquid quam. Officiis nulla nam laudantium iure amet. Debitis maiores enim modi porro sunt. Ratione harum quasi odit nemo rerum eveniet dolorem quas rem asperiores voluptate!</p>
+              <a href="#" class="btn btn-outline-secondary header-btn btn-lg mt-2">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="testimonial">
+      <div class="container">
+        <p class="h2 mb-2">
+          Consectetur esse incidunt voluptatibus modi quae ipsa eos corrupti ad rerum? Modi natus necessitatibus eaque illum voluptas accusamus aliquid ipsum consectetur? Voluptate voluptate in deleniti amet itaque eius? Impedit sapiente?
+        </p>
+        <p class="h4">- Ryan Ray</p>
+      </div>
+    </section>
+
+    <section id="info-one">
+      <div class="container">
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <div class="info-left">
+              <img src="img/image2.png" style="width: 100%">
+            </div>
+          </div>
+          <div class="col-md-6 my-auto">
+            <div class="info-right">
+              <h2>Consectetur magnam quos voluptatibus laboriosam.</h2>
+              <p>Amet vero earum quis modi ad? Voluptate id nihil harum mollitia exercitationem, dolores mollitia minus voluptates repellat esse. Dignissimos consectetur libero mollitia nihil enim. Nam pariatur veritatis ratione temporibus nisi!</p>
+              <a href="#" class="btn btn-outline-secondary btn-lg">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="info-two">
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-6">
+            <h2>Lorem repellat qui.</h2>
+            <p>Amet neque nulla enim ex adipisci. Dolorum maxime at mollitia eius explicabo maxime eaque hic eveniet corporis est officia corporis laudantium sed odit officia, voluptates iure in doloremque. Atque quo.</p>
+          </div>
+          <div class="col-md-6">
+            <h2>Dolor harum debitis!</h2>
+            <p>Ipsum neque ratione illo fuga numquam accusamus. Ipsam dolore non reprehenderit sed voluptatibus. Aut fugit repudiandae consectetur in obcaecati doloremque praesentium ratione. Laboriosam sapiente corrupti laboriosam aut velit quidem itaque.</p>
+          </div>
+        </div>
+      </div>
+    </section>-->
+    <section class="parallax-container" id="Home">
+      <!--Tittle-->
+      <h1>Kevin</h1> 
+      <div class="asolid">
+        <p>&</p>
+      </div> 
+      <h1>Belen</h1>
+      <div class="sombra">
+        <p>
+          11-11-2023
+        </p>
+      </div>
+      <!--End Title-->
+    </section>
+
+    <section class="buffer"></section>
+
+    <section class="parallax-container parallax-container2">
+      <div class="card">
+        <div class="card-img"></div>
+        <h3>Hiking</h3>
+        <p>
+          Explore the myriad of trails through the mountaineous. Choose the
+          difficulty appropriate to your fitness level.
+        </p>
+        <a href="#">Learn more</a>
+      </div>
+      <div class="card">
+        <div class="card-img"></div>
+        <h3>Rock climbing</h3>
+        <p>
+          The goal is to reach the summit of a formation or the endpoint of a
+          usually pre-defined route without falling
+        </p>
+        <a href="#">Learn more</a>
+      </div>
+      <div class="card">
+        <div class="card-img"></div>
+        <h3>Caving</h3>
+        <p>
+          Exploring underground through networks of tunnels and passageways,
+          which can be natural or artificial.
+        </p>
+        <a href="#">Learn more</a>
+      </div>
+      <div class="card">
+        <div class="card-img"></div>
+        <h3>Paragliding</h3>
+        <p>
+          Get lift off from the mountain and enjoy through the splendor of the
+          surrounding landscape by parachute.
+        </p>
+        <a href="#">Learn more</a>
+      </div>
+    </section>
+
+    <section class="buffer"></section>
+
+    <!-- SCRIPTS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <!-- SCROOLL REVEAL SCRIPT -->
+    <script src="{% static 'js/behavior.js '%}"></script>
+  </body>
 </html>
