--- a/apps/invitaciones/templates/main.html
+++ b/apps/invitaciones/templates/main.html
@@ -2,179 +2,235 @@
 <html lang="en">
   <head>
     {% load static %}
-    
+
     <meta charset="UTF-8"/>
     <title>Bootstrap Website Two</title>
     <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Antonio:wght@100;300&display=swap" rel="stylesheet">
+    
     <!-- BOOTSTRAP 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- SCROOLL REVEAL JS LIBRARY CDN -->
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css'%}">
+    <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
   </head>
   <body>
-    <!--<div class="parallax-mirror" style="visibility: visible; z-index: -100; position: fixed; top: 0px; left: 0px; overflow: hidden; transform: translate3d(0px, 0px, 0px); height: 1199.39px; width: 1312px;"><img class="parallax-slider" src="https://www.fixdate.io/modelo-invitacion/32/img/portada-3.webp" style="transform: translate3d(-228px, 0px, 0px); position: absolute; height: 989px; width: 1769px; max-width: none;"></div>-->
-    <!-- NAVIGATION -->
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#">WebsiteTwo</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" href="#header">Home</a>
-            <a class="nav-item nav-link" href="#header">Home</a>
-            <a class="nav-item nav-link" href="#info-one">About</a>
-            <a class="nav-item nav-link" href="#contact">Contact</a>
-        </div>
+    <section class="parallax-container" id="Home" style = "background-image: url({% static 'img/paralax1back.jpg' %})">
+      <div class="text-center" id="Ready1">
+        <h2 Id="tittlewedding">Kevin + Belen</h2>
+        <h2  Id="subTittlewedding">11 De Noviembre 2023</h2>
+        <!--<h4>LAS CORTADERAS</h4>
+        <h6>DIQUE LUJAN, BENAVIDEZ</h6>-->
       </div>
-    </nav>-->
+      <div id="countdown" class="row htmlbodyClock justify-content-center align-items-center "></div>
+      <div class="sticky-top">
+        <img src="{% static 'img/AvionBase.png' %}"  >
+      </div>
+    </section>
 
-    <!-- SECTION -->
-    <!--
-    <section id = "Home">
-        <div class="content-portada text-center">
-            <div class= "box-nombres-fecha-portada">
-                <span class="fecha">
-                    11.11.2023          
-                </span>
-                <h1>
-                    Kevin<br class="d-md-none">
-                    <span>&amp;</span>
-                    <br class="d-md-none">
-                    Belen          
-                </h1>
-                <div class="line">
+    <section class="buffer light">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <!-- Slide One - Set the background image for this slide in the line below -->
+          <div class="carousel-item active" style="background-image: url({% static 'img/cortaderas.jpg' %})">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-4">First Slide</h2>
+              <p class="lead">This is a description for the first slide.</p>
+            </div>
+          </div>
+          <!-- Slide Two - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('https://4.bp.blogspot.com/-InDD3Hm_bhU/XB4_TK3TT7I/AAAAAAAAAJ4/r5tUeCOqq1MTchFh7D7pWdf582A4qYIIwCEwYBhgL/s1600/Businesswoman-working-at-a-computer-1280x720.jpg')">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-4">Second Slide</h2>
+              <p class="lead">This is a description for the second slide.</p>
+            </div>
+          </div>
+          <!-- Slide Three - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('https://1.bp.blogspot.com/-GWl5F8P4t-8/XB4_VV4VE5I/AAAAAAAAAKE/SmHRzas-LpMpDBoLn6otR9AznVsr6L7OgCEwYBhgL/s1600/t1larg.africa.cnn.jpg')">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-4">Third Slide</h2>
+              <p class="lead">This is a description for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+      </div>
+    </section>
+
+    <section class="parallax-container parallax-container2" style = "background-image: url({% static 'img/pexels-taryn-elliott-5405598 copy.jpg' %})">
+
+      <div class="container text-center">
+        <div class="col-md-12">
+          <h1>Nuestra  Fiesta</h1>
+          <p class="subtitle">Hagamos juntos una fiesta épica. Aquí algunos detalles a tener en cuenta.</p>
+        </div>
+
+        <!--<div class="row align-items-center">
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="{%static 'img/gift.jpg' %}" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Regalos</h5>
+                <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="card-link">Ver Mas</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="{%static 'img/music.jpg' %}" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Musica</h5>
+                <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="card-link">Sugerir Temas</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="{%static 'img/dresscode.jpg' %}" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Dress Code</h5>
+                <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="card-link">+ Info</a>
+              </div>
+            </div>
+          </div>
+        </div>-->
+
+        <div class="row align-items-center">
+          <div class="card-deck">
+            <div class="card" style="width: 21rem;">
+              <img class="card-img-top" src="{%static 'img/gift.jpg' %}" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Regalos</h5>
+                <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="card-link">Ver Mas</a>
+              </div>
+            </div>
+          
+          
+            <div class="card" style="width: 21rem;">
+              <img class="card-img-top" src="{%static 'img/music.jpg' %}" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Musica</h5>
+                <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="card-link">Sugerir Temas</a>
+              </div>
+            </div>
+          
+          
+            <div class="card" style="width: 21rem;">
+              <img class="card-img-top" src="{%static 'img/dresscode.jpg' %}" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Dress Code</h5>
+                <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="card-link">+ Info</a>
+              </div>
+            </div>
+          </div>
+        
+
+      </div>
+    </section>
+
+    <section class="buffer" style = "background-image: url({% static 'img/bufferbackground.jpg' %}); background-size: cover; background-repeat: no-repeat;   background-position: inherit; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
+      <div class="container text-center">
+        <div class="row justify-content-center align-items-center">
+          <div class="card bottom-card">
+            <div class="bufferinfo"> Te Invitamos a Nuestro Casamiento </div>
+            <div class="bufferdata">Confirma tu asistencia</div>
+            <div class="card-body">
+              <form>
+                <div class="mb-3">
+                  <input type="email" class="form-control form-inputField" id="floatingInputValue" placeholder="Nombre Completo" >
+                  
                 </div>
-            </div>
-        </div>
-    </section>
-    <section id="header">
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col-md-6 col-sm-6">
-            <div class="header-content-left">
-              <img src="img/image1.png" style="width: 100%;">
-            </div>  
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="header-content-right">
-              <h1 class="display-4">Sit asperiores voluptas atque autem?</h1>
-              <p class="mt-5">Amet possimus omnis dolore aliquid quam. Officiis nulla nam laudantium iure amet. Debitis maiores enim modi porro sunt. Ratione harum quasi odit nemo rerum eveniet dolorem quas rem asperiores voluptate!</p>
-              <a href="#" class="btn btn-outline-secondary header-btn btn-lg mt-2">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+                <div class="mb-3">
+                  <input type="email" class="form-control form-inputField" id="floatingInputValue" placeholder="Direccion de Emial" >
+                </div>
+                <div class="input_container">
+                  <div class="mb-3 input-flex">
+                    <input type="email" class="form-control form-inputField-particular" id="floatingInputValue" placeholder="Numero de acompañantes" >
+                    
+                  </div>
+                  <div class="mb-3 input-flex">
+              
+                    <select class="form-select form-inputField-particular" aria-label="Preferencia de comida">
+                      <option selected>Abri y selecciona</option>
+                      <option value="1">Vegetariano</option>
+                      <option value="2">Celiaco</option>
+                      <option value="3">Vegano</option>
+                    </select>
+                  </div>
+                </div>
 
-    <section id="testimonial">
-      <div class="container">
-        <p class="h2 mb-2">
-          Consectetur esse incidunt voluptatibus modi quae ipsa eos corrupti ad rerum? Modi natus necessitatibus eaque illum voluptas accusamus aliquid ipsum consectetur? Voluptate voluptate in deleniti amet itaque eius? Impedit sapiente?
-        </p>
-        <p class="h4">- Ryan Ray</p>
-      </div>
-    </section>
+                
 
-    <section id="info-one">
-      <div class="container">
-        <div class="row mt-5">
-          <div class="col-md-6">
-            <div class="info-left">
-              <img src="img/image2.png" style="width: 100%">
+                <div class="mb-3">
+                  <textarea class="form-control form-inputField" placeholder="Mensaje" id="floatingTextarea"></textarea>
+                </div>
+                <!--<a href="#" type="submit" class="card-link">Enviar</a>-->
+                <button type="submit" class="btn btn-link card-link">Submit</button>
+              </form>
             </div>
           </div>
-          <div class="col-md-6 my-auto">
-            <div class="info-right">
-              <h2>Consectetur magnam quos voluptatibus laboriosam.</h2>
-              <p>Amet vero earum quis modi ad? Voluptate id nihil harum mollitia exercitationem, dolores mollitia minus voluptates repellat esse. Dignissimos consectetur libero mollitia nihil enim. Nam pariatur veritatis ratione temporibus nisi!</p>
-              <a href="#" class="btn btn-outline-secondary btn-lg">Read More</a>
-            </div>
-          </div>
+        <!--<div class="text-center">
+          <img src="{%static 'img/rama.png' %}" class="card-img-top-form" alt="...">
+        </div>-->
         </div>
       </div>
     </section>
-
-    <section id="info-two">
-      <div class="container">
-        <div class="row my-5">
-          <div class="col-md-6">
-            <h2>Lorem repellat qui.</h2>
-            <p>Amet neque nulla enim ex adipisci. Dolorum maxime at mollitia eius explicabo maxime eaque hic eveniet corporis est officia corporis laudantium sed odit officia, voluptates iure in doloremque. Atque quo.</p>
+    <!-- Modal / Ventana / Overlay en HTML -->
+    <div id="victorModal" class="modal fade">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  <h4 class="modal-title">¿Estás seguro?</h4>
+              </div>
+              <div class="modal-body">
+                  <p>¿Seguro que quieres borrar este elemento?</p>
+                  <p class="text-warning"><small>Si lo borras, nunca podrás recuperarlo.</small></p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                  <button type="button" class="btn btn-danger">Eliminar</button>
+              </div>
           </div>
-          <div class="col-md-6">
-            <h2>Dolor harum debitis!</h2>
-            <p>Ipsum neque ratione illo fuga numquam accusamus. Ipsam dolore non reprehenderit sed voluptatibus. Aut fugit repudiandae consectetur in obcaecati doloremque praesentium ratione. Laboriosam sapiente corrupti laboriosam aut velit quidem itaque.</p>
-          </div>
-        </div>
       </div>
-    </section>-->
-    <section class="parallax-container" id="Home">
-      <!--Tittle-->
-      <h1>Kevin</h1> 
-      <div class="asolid">
-        <p>&</p>
-      </div> 
-      <h1>Belen</h1>
-      <div class="sombra">
-        <p>
-          11-11-2023
-        </p>
-      </div>
-      <!--End Title-->
-    </section>
-
-    <section class="buffer"></section>
-
-    <section class="parallax-container parallax-container2">
-      <div class="card">
-        <div class="card-img"></div>
-        <h3>Hiking</h3>
-        <p>
-          Explore the myriad of trails through the mountaineous. Choose the
-          difficulty appropriate to your fitness level.
-        </p>
-        <a href="#">Learn more</a>
-      </div>
-      <div class="card">
-        <div class="card-img"></div>
-        <h3>Rock climbing</h3>
-        <p>
-          The goal is to reach the summit of a formation or the endpoint of a
-          usually pre-defined route without falling
-        </p>
-        <a href="#">Learn more</a>
-      </div>
-      <div class="card">
-        <div class="card-img"></div>
-        <h3>Caving</h3>
-        <p>
-          Exploring underground through networks of tunnels and passageways,
-          which can be natural or artificial.
-        </p>
-        <a href="#">Learn more</a>
-      </div>
-      <div class="card">
-        <div class="card-img"></div>
-        <h3>Paragliding</h3>
-        <p>
-          Get lift off from the mountain and enjoy through the splendor of the
-          surrounding landscape by parachute.
-        </p>
-        <a href="#">Learn more</a>
-      </div>
-    </section>
-
-    <section class="buffer"></section>
-
+    </div>
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!--<script src="plugins/countdown-timezone/js/countdown.jquery.js" defer></script>-->
     <!-- SCROOLL REVEAL SCRIPT -->
-    <script src="{% static 'js/behavior.js '%}"></script>
+
+    <script src="{%static 'js/popper.min.js'%}"></script>
+    <script src="{%static 'plugins/countdown-timezone/js/countdown.jquery.js'%}"></script>
+    <script src="{% static 'js/behavior.js'%}"></script>
+  </body>
+    
   </body>
 </html>
