--- a/apps/invitaciones/templates/main.html
+++ b/apps/invitaciones/templates/main.html
@@ -44,21 +44,21 @@
           <!-- Slide One - Set the background image for this slide in the line below -->
           <div class="carousel-item active" style="background-image: url({% static 'img/cortaderas.jpg' %})">
             <div class="carousel-caption d-none d-md-block">
-              <h2 class="display-4">First Slide</h2>
+              <h2 class="display-4">Lugar</h2>
               <p class="lead">This is a description for the first slide.</p>
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('https://4.bp.blogspot.com/-InDD3Hm_bhU/XB4_TK3TT7I/AAAAAAAAAJ4/r5tUeCOqq1MTchFh7D7pWdf582A4qYIIwCEwYBhgL/s1600/Businesswoman-working-at-a-computer-1280x720.jpg')">
+          <div class="carousel-item" style="background-image: url({% static 'img/cortaderas.jpg' %})">
             <div class="carousel-caption d-none d-md-block">
-              <h2 class="display-4">Second Slide</h2>
+              <h2 class="display-4">Regalos</h2>
               <p class="lead">This is a description for the second slide.</p>
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('https://1.bp.blogspot.com/-GWl5F8P4t-8/XB4_VV4VE5I/AAAAAAAAAKE/SmHRzas-LpMpDBoLn6otR9AznVsr6L7OgCEwYBhgL/s1600/t1larg.africa.cnn.jpg')">
+          <div class="carousel-item" style="background-image: url({% static 'img/cortaderas.jpg' %})">
             <div class="carousel-caption d-none d-md-block">
-              <h2 class="display-4">Third Slide</h2>
+              <h2 class="display-4">Fiesta</h2>
               <p class="lead">This is a description for the third slide.</p>
             </div>
           </div>
