--- a/apps/invitaciones/templates/main.html
+++ b/apps/invitaciones/templates/main.html
@@ -108,7 +108,7 @@
               <div class="card-body">
                 <h5 class="card-title">Dress Code</h5>
                 <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
-                <a href="#" class="card-link">+ Info</a>
+                <a href="#" class="card-link" data-toggle="modal" data-target="#idDelModal">+ Info</a>
               </div>
             </div>
           </div>
@@ -156,25 +156,28 @@
         </div>
       </div>
     </section>
-    <!-- Modal / Ventana / Overlay en HTML -->
-    <div id="victorModal" class="modal fade">
-      <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                  <h4 class="modal-title">¿Estás seguro?</h4>
-              </div>
-              <div class="modal-body">
-                  <p>¿Seguro que quieres borrar este elemento?</p>
-                  <p class="text-warning"><small>Si lo borras, nunca podrás recuperarlo.</small></p>
-              </div>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-danger">Eliminar</button>
-              </div>
+
+
+    <div class="modal fade" id="idDelModal">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
       </div>
     </div>
+    
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
@@ -187,5 +190,5 @@
     <script src="{% static 'js/behavior.js'%}"></script>
   </body>
     
-  </body>
+  <!--</body>-->
 </html>
