new styles and fixed card issues

--- a/apps/invitaciones/templates/main.html
+++ b/apps/invitaciones/templates/main.html
@@ -74,16 +74,10 @@
       </div>
     </section>
 
-    <section class="parallax-container parallax-container2" style = "background-image: url({% static 'img/pexels-taryn-elliott-5405598 copy.jpg' %})">
-
-      <div class="container text-center">
-        <div class="col-md-12">
-          <h1>Nuestra  Fiesta</h1>
-          <p class="subtitle">Hagamos juntos una fiesta épica. Aquí algunos detalles a tener en cuenta.</p>
-        </div>
-        <div class="row align-items-center">
-          <div class="card-deck">
-            <div class="card" style="width: 21rem;">
+    <section class="parallax-container parallax-container2" style = "background-image: url({% static 'img/paralax1back.jpg' %})">
+      <div class="row  mx-md-n5">
+        <!--<div class="col-md-6 col-sm-3">
+            <div class="card" style="width: 19rem;">
               <img class="card-img-top" src="{%static 'img/gift.jpg' %}" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Regalos</h5>
@@ -91,19 +85,19 @@
                 <a href="#" class="card-link">Ver Mas</a>
               </div>
             </div>
-          
-          
-            <div class="card" style="width: 21rem;">
+        </div> -->
+        <div class="col-md-6 col-sm-3">
+            <div class="card" style="width: 19rem;">
               <img class="card-img-top" src="{%static 'img/music.jpg' %}" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Musica</h5>
                 <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
-                <a href="#" class="card-link">Sugerir Temas</a>
+                <a href="#floatingTextareaSong" class="card-link">Sugerir Temas</a>
               </div>
             </div>
-          
-          
-            <div class="card" style="width: 21rem;">
+        </div>  
+        <div class="col-md-6 col-sm-3">
+            <div class="card" style="width: 19rem;">
               <img class="card-img-top" src="{%static 'img/dresscode.jpg' %}" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Dress Code</h5>
@@ -111,7 +105,7 @@
                 <a href="#" class="card-link">+ Info</a>
               </div>
             </div>
-          </div>
+        </div>
       </div>
     </section>
 
