--- a/apps/invitaciones/templates/main.html
+++ b/apps/invitaciones/templates/main.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     {% load static %}
-
     <meta charset="UTF-8"/>
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">-->
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=1.3">
     <title>Bootstrap Website Two</title>
     <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
@@ -17,6 +18,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- SCROOLL REVEAL JS LIBRARY CDN -->
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.0.5/flickity.min.css"></script>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.0.5/flickity.min.css"></link>
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css'%}">
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
@@ -33,7 +37,8 @@
       </div>
     </section>
 
-    <section class="buffer light">
+    <section class="buffer light " >
+
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -41,21 +46,21 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <!-- Slide One - Set the background image for this slide in the line below -->
+          
           <div class="carousel-item active" style="background-image: url({% static 'img/cortaderas.jpg' %})">
             <div class="carousel-caption d-none d-md-block">
               <h2 class="display-4">Lugar</h2>
-              <p class="lead"><a href="#" class="card-link" data-toggle="modal" data-target="#idDelModal">Cortaderas - Dique Lujan</a></p>
+              <p class="lead"><a href="#" onclick="getPlace();" class="card-link">Cortaderas - Dique Lujan</a></p>
             </div>
           </div>
-          <!-- Slide Two - Set the background image for this slide in the line below -->
+          
           <div class="carousel-item" style="background-image: url({% static 'img/cortaderas.jpg' %})">
             <div class="carousel-caption d-none d-md-block">
               <h2 class="display-4">Regalos</h2>
               <p class="lead">This is a description for the second slide.</p>
             </div>
           </div>
-          <!-- Slide Three - Set the background image for this slide in the line below -->
+         
           <div class="carousel-item" style="background-image: url({% static 'img/cortaderas.jpg' %})">
             <div class="carousel-caption d-none d-md-block">
               <h2 class="display-4">Fiesta</h2>
@@ -87,20 +92,20 @@
             </div>
         </div> -->
         <div class="col-md-6 col-sm-3">
-            <div class="card" style="width: 19rem;">
+            <div class="card" style="width: 23rem;">
               <img class="card-img-top" src="{%static 'img/music.jpg' %}" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Musica</h5>
+                <h5 class="card-title">MUSICA</h5>
                 <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
                 <a href="#floatingTextareaSong" class="card-link">Sugerir Temas</a>
               </div>
             </div>
         </div>  
         <div class="col-md-6 col-sm-3">
-            <div class="card" style="width: 19rem;">
+            <div class="card" style="width: 23rem;">
               <img class="card-img-top" src="{%static 'img/dresscode.jpg' %}" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Dress Code</h5>
+                <h5 class="card-title">DRESS CODE</h5>
                 <p class="card-text">Algun texto de ejemplo para construir sobre el título de la tarjeta y formar la mayor parte del contenido de la tarjeta.</p>
                 <a href="#" class="card-link">+ Info</a>
               </div>
